--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<h1 id="logo" class="text-center">
 			<img class="img-circle" src="assets/images/guy.jpg" alt="">
 			<span class="title">Anthony Russel</span>
-			<span class="tagline">A mystery person<br>
+			<span class="tagline">A zmystery person<br>
 				<a href="">anthony.russel42@example.com</a></span>
 		</h1>
 	</div>
