Changes by anup

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<span class="title">Divya A Gowda</span>
 			<span class="tagline">A mystery person<br>
 
-				<a href="">anthony.russel42@example.com</a></span>
+				<a href="">example@example.com</a></span>
 		</h1>
 	</div>
 
