Changes by anup

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<img class="img-circle" src="assets/images/guy.jpg" alt="">
 
 			<span class="title">Divya A Gowda</span>
-			<span class="tagline">A mystery person<br>
+			<span class="tagline">Bachelor of engineering in computer science<br>
 
 				<a href="">example@example.com</a></span>
 		</h1>
