--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<!--[if lt IE 9]> <script src="assets/js/html5shiv.js"></script> <![endif]-->
 </head>
-<body class="home">
+<body class="home container">
 
 <header id="header">
 	<div id="head" class="parallax" parallax-speed="2">
